# iptv_manage_scan

./: .gitignore  README.md  README_EN.md
.mimocode/plans/: 1782962313830-curious-panda.md
IPTVManager/: .gitignore  .gitmodules  CMakeLists.txt  README.md
IPTVManager/resources/: AppIcon.icns  db_def.db
IPTVManager/resources/translations/: IPTVManager_zh_CN.ts
IPTVManager/scripts/: fix_ffmpeg_rpaths.sh
IPTVManager/src/: main.cpp
IPTVManager/src/core/: CMakeLists.txt
IPTVManager/src/core/config/: appconfig.cpp  appconfig.h  bootstrap.cpp  bootstrap.h  configkeys.h
IPTVManager/src/core/logging/: logmanager.cpp  logmanager.h
IPTVManager/src/database/: CMakeLists.txt  channel_repository.cpp  channel_repository.h  database_manager.cpp  database_manager.h  schema_manager.cpp  schema_manager.h  source_repository.cpp  source_repository.h  types.h
IPTVManager/src/export/: csv_exporter.cpp  csv_exporter.h  exporter.h  m3u_exporter.cpp  m3u_exporter.h  scanfile_generator.cpp  scanfile_generator.h  txt_exporter.cpp  txt_exporter.h  xlsx_exporter.cpp  xlsx_exporter.h
IPTVManager/src/logic/: CMakeLists.txt  channel_service.cpp  channel_service.h  check_service.cpp  check_service.h  tvlist_builder.cpp  tvlist_builder.h  url_builder.cpp  url_builder.h
IPTVManager/src/multimedia/: CMakeLists.txt  ffmpeg_utils.cpp  ffmpeg_utils.h  stream_info.cpp  stream_info.h  stream_probe.cpp  stream_probe.h  video_decoder.cpp  video_decoder.h
IPTVManager/src/network/: httpclient.cpp  httpclient.h  logo_fetcher.cpp  logo_fetcher.h
IPTVManager/src/platform/: CMakeLists.txt  platform_defs.h
IPTVManager/src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
IPTVManager/src/ui/dialogs/: dbsetupdialog.cpp  dbsetupdialog.h  dbsetupdialog.ui  infodialog.cpp  infodialog.h  infodialog.ui
IPTVManager/src/ui/models/: channel_table_model.cpp  channel_table_model.h  source_table_model.cpp  source_table_model.h
IPTVManager/src/ui/styles/: styleconstants.h
IPTVManager/src/ui/widgets/: video_preview_widget.cpp  video_preview_widget.h
IPTVManager/tests/: CMakeLists.txt  test_channel_service.cpp  test_config.cpp  test_exporters.cpp  test_source_repository.cpp  test_url_builder.cpp
IPTVScan/: AppIcon.icns  CMakeLists.txt  Info.plist.in  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainthread.cpp  mainthread.h  scanthread.cpp  scanthread.h
IPTVScanner/: CMakeLists.txt  Info.plist.in
IPTVScanner/resources/translations/: IPTVScanner_en_US.ts  IPTVScanner_zh_CN.ts
IPTVScanner/src/: main.cpp
IPTVScanner/src/core/: CMakeLists.txt
IPTVScanner/src/core/config/: appconfig.cpp  appconfig.h  configkeys.h
IPTVScanner/src/core/logging/: logcategories.h  logmanager.cpp  logmanager.h
IPTVScanner/src/logic/: CMakeLists.txt  scan_service.cpp  scan_service.h  url_builder.cpp  url_builder.h
IPTVScanner/src/multimedia/: CMakeLists.txt  ffmpeg_utils.cpp  ffmpeg_utils.h  stream_info.cpp  stream_info.h  stream_probe.cpp  stream_probe.h
IPTVScanner/src/platform/: platform_defs.h
IPTVScanner/src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
IPTVScanner/src/ui/models/: scan_result_model.cpp  scan_result_model.h
IPTVScanner/src/ui/widgets/: log_widget.cpp  log_widget.h
IPTVScanner/tests/: CMakeLists.txt  test_url_builder.cpp
TVMC/: CMakeLists.txt
TVMC/cmake/: FindFFmpeg.cmake  Platform.cmake
TVMC/resources/: db_def.sql  dbrec.qrc
TVMC/resources/qml/: Theme.qml  main.qml
TVMC/resources/qml/IptvComponents/: IptvButton.qml  IptvCheckBox.qml  IptvComboBox.qml  IptvInput.qml  IptvProgressBar.qml  IptvRadioButton.qml  IptvSmallButton.qml  IptvSpinBox.qml  IptvTableView.qml  IptvTextField.qml  RichTextComboBox.qml  VideoPreview.qml
TVMC/resources/qml/dialogs/: DbSetupDialog.qml  InfoDialog.qml
TVMC/resources/qml/tabs/: BrowseTab.qml  CheckTab.qml  EditTab.qml  ScanTab.qml  SettingsTab.qml
TVMC/resources/translations/: TVMC_en_US.ts  TVMC_zh_CN.ts
TVMC/src/: main.cpp
TVMC/src/core/config/: appconfig.cpp  appconfig.h  bootstrap.cpp  configkeys.h
TVMC/src/core/logging/: logcategories.h
TVMC/src/database/: database_manager.cpp  schema_manager.cpp  source_repository.cpp  sql_query_model_qml.cpp  sql_query_model_qml.h  types.h
TVMC/src/export/: CMakeLists.txt  exporter.h  m3u_exporter.cpp  m3u_exporter.h  scanfile_generator.h  xlsx_exporter.cpp
TVMC/src/logic/: CMakeLists.txt  channel_service.h  check_service.cpp  guide_manager.cpp  guide_manager.h  scan_service.cpp  scan_service.h  tvlist_builder.cpp  url_builder.cpp  url_builder.h
TVMC/src/multimedia/: CMakeLists.txt  ffmpeg_utils.cpp  ffmpeg_utils.h  scanner_stream_probe.cpp  scanner_stream_probe.h  stream_info.h  stream_probe.cpp  video_decoder.cpp
TVMC/src/network/: CMakeLists.txt  httpclient.cpp  httpclient.h  logo_fetcher.cpp  logo_fetcher.h
TVMC/src/ui/: CMakeLists.txt  frame_image_provider.cpp  frame_image_provider.h  language_manager.cpp  language_manager.h  logo_image_provider.cpp  logo_image_provider.h  manager_backend.cpp  manager_backend.h  scanner_backend.cpp  scanner_backend.h  setup_helper.cpp  setup_helper.h  video_frame_provider.cpp  video_frame_provider.h
TVMC/src/ui/models/: check_list_model.cpp  check_list_model.h  scan_result_model.cpp
docs/: QUICKSTART.md  QUICKSTART_EN.md  SCAN_GUIDE.md  SCAN_GUIDE_EN.md
